Add shortcut for linux reverse shell